@@ -240,7 +240,7 @@ public class ArtifactUploadTask implements Callable<String> {
                 handlerNpmLayoutUpload(is, layout, repositoryPath);
             } else if (PubLayoutProvider.ALIAS.equals(layout)) {
                 handlerPubLayoutUpload(is, layout, repositoryPath);
-            }else if(DockerLayoutProvider.ALIAS.equals(layout)){
+            }else if(StringUtils.isNotBlank(imageTag) && DockerLayoutProvider.ALIAS.equals(layout)){
                 handlerDockerUploadProcess(this.storageId,  this.repositoryId, this.imageTag, this.file,this.baseUrl);
 
             } else {
@@ -801,33 +801,33 @@ public class ArtifactUploadTask implements Callable<String> {
         } else if (url.contains(prefix2)) {
             tag = url.replaceAll("^" + prefix2, "");
         }
-       try {
-           String token = this.token;//securityComponent.getSecurityToken();
-               String uuid = UUID.randomUUID().toString();
-           String TEMP_UPLOAD_DIR = String.join("/",tempPath, uuid);
-           // 将文件保存到指定目录下
-           String fileName = multipartFile.getOriginalFilename();
-           Path tempDirectory = Files.createDirectory(Path.of(TEMP_UPLOAD_DIR));
-           Path localPath = Paths.get(String.join("/", tempDirectory.toString(), fileName));
+        try {
+            String token = this.token;//securityComponent.getSecurityToken();
+            String uuid = UUID.randomUUID().toString();
+            String TEMP_UPLOAD_DIR = String.join("/",tempPath, uuid);
+            // 将文件保存到指定目录下
+            String fileName = multipartFile.getOriginalFilename();
+            Path tempDirectory = Files.createDirectory(Path.of(TEMP_UPLOAD_DIR));
+            Path localPath = Paths.get(String.join("/", tempDirectory.toString(), fileName));
 
-           Files.copy(multipartFile.getInputStream(), localPath);
+            Files.copy(multipartFile.getInputStream(), localPath);
 
-           Path localPath2 = DockerParsePacketsUtil.parsePackets(localPath,tempDirectory);
-           Jib.from(TarImage.at(localPath2))
-                   .containerize(Containerizer.to(
-                           RegistryImage
-                                   .named(tag)
-                                   .addCredential("<token>", token)
-                   ).setAllowInsecureRegistries(true));
+            Path localPath2 = DockerParsePacketsUtil.parsePackets(localPath,tempDirectory);
+            Jib.from(TarImage.at(localPath2))
+                    .containerize(Containerizer.to(
+                            RegistryImage
+                                    .named(tag)
+                                    .addCredential("<token>", token)
+                    ).setAllowInsecureRegistries(true));
 
-           Files.walk(tempDirectory)
-                   .sorted(Comparator.reverseOrder())
-                   .map(Path::toFile)
-                   .forEach(File::delete);
-       }catch (Exception e){
-           e.printStackTrace();
-           log.error("docker upload error uuid: {} ,storageId:{} ,repositoryId:{} ,tag:{}", uuid,storageId,repositoryId,tag);
-       }
+            Files.walk(tempDirectory)
+                    .sorted(Comparator.reverseOrder())
+                    .map(Path::toFile)
+                    .forEach(File::delete);
+        }catch (Exception e){
+            e.printStackTrace();
+            log.error("docker upload error uuid: {} ,storageId:{} ,repositoryId:{} ,tag:{}", uuid,storageId,repositoryId,tag);
+        }
 
 
     }
